2005-08-09  Timo Schulz  <ts@g10code.com>

	* main.c (outlook_gpg_get_version): New.
	Use same version as the Outlook GPG plugin.

2005-08-09  Werner Koch  <wk@g10code.com>

	* MapiGPGME.cpp (userid_from_key, keyid_from_key): New. Changed
	all calls to the deprecated gpgme_key_get_string_attr function by
	these.

	* MapiGPGME.h, MapiGPGME.cpp: Splitted into interace and
	implementation.
	* HashTable.h (class HashTable): No need to dll export anything.

2005-08-08  Werner Koch  <wk@g10code.com>

	* common.c (w32_shgetfolderpath): Added.
	* config-dialog.c (load_config_value_ext): use it here.

2005-07-21  Timo Schulz  <twoaday@g10code.com>

	* MapiGPGME.cpp (decrypt): Only return if no valid PGP
	data was found and the message has no attachments.
	* engine-gpgme.c (op_encrypt): Use --textmode to fix 
	problems when the recipient OS has different line endings.
	For example Win32->Linux.

2005-07-20  Timo Schulz  <twoaday@g10code.com>

	* MapiGPGME.cpp (addHtmlLineEndings): New.
	(encrypt):Use it here.
	(signEncrypt): Likewise. Free memory in case of errors.
	(decrypt): Free memory in case of the verify procedure.
	Issue a warning when the text of the mail could not be
	updated.
	(isMessageEncrypted): New.
	(countAttachments): Check for null pointers.
	(clearPassphrase): Likewise.
	* config-dialog.c (store_config_value): Support '%val%' input.
	* verify-dialog.c (load_akalist): Return the number of user-ids
	which were added.
	* passphrase-dialog.c (load_secbox): Make sure we really start
	to add the item data at the begin.
	* intern.h: Fixed GCC compiler problem.

2005-07-19  Timo Schulz  <twoaday@g10code.com>

	* MapiGPGME.cpp (encrypt): Handle cancel.
	(encryptAttachments): If no attachments exist, close the table.
	(decryptAttachments): Likewise.
	(signAttachments): Likewise.
	(isHtmlBody): New.
	(isHtmlMessage): New.
	(setBody): Html support.
	(encrypt): Figure out if message is html and encode the right body.
	(signEncrypt): Likewise.