@@ -1,27 +1,12 @@
-SECTIONS
-	.SHARDAT READ WRITE SHARED
+LIBRARY libgpgmedlgs.dll
+
+;SECTIONS
+;	.SHARDAT READ WRITE SHARED
+
 
 EXPORTS
-	recipient_dialog_box
-	recipient_dialog_box2
-	signer_dialog_box
-	config_dialog_box
-	passphrase_callback_box
-	free_decrypt_key
-	verify_dialog_box 
-	start_key_manager
+	CreateMapiGPGME@4
 
-	init_keycache_objects
-	cleanup_keycache_objects 
-	find_gpg_key
 
-	op_init
-	op_deinit
-	op_strerror
-	op_decrypt_start
 
-	outlook_gpg_get_version
 
-	HashTable_free
-
-	CreateMapiGPGME
