@@ -3,6 +3,8 @@
 	* main.c (outlook_gpg_get_version): New.
 	Use same version as the Outlook GPG plugin.
 
+	* MapiGPGME.cpp [!__MINGW32__]: Changed sequence of include files.
+
 2005-08-09  Werner Koch  <wk@g10code.com>
 
 	* MapiGPGME.cpp (userid_from_key, keyid_from_key): New. Changed
